package ui.main;

import domain.system.Generator;
import ui.swing.MainMenuForm;

/**
 * @author Lazyness or Dimazik
 * @version jdk 11
 * <p>
 * In the Banking System we must realise:
 * ❌ Sing in;
 * ❌ Registration;
 * ❌ Menu acts;
 * ❌ Replenishment of the account on the card;
 * ❌ Withdrawing money from the card;
 * ❌ Opportunity to take out a loan;
 * ❌ Money transfer;
 * ❌ Replenishment of mobile;
 * ❌ Create new card;
 * ❌ Add addition phone;
 * ❌ Check amount on the card;
 * ❌ Check amount on the phone.
 */

public class Main {
    public static void main(String[] args) {
        new MainMenuForm();
    }
}
